added support for both symmetric and asymmetric validation